metadata/force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__Account__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account of the user that created this transaction payment.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CC Transaction Payments</relationshipLabel>
    <relationshipName>TransactionPayments</relationshipName>
    <type>Lookup</type>
</CustomField>