metadata/force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__Address__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The address associated with this payment.</description>
    <label>Address</label>
    <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
    <relationshipLabel>CC Transaction Payments</relationshipLabel>
    <relationshipName>TransactionPayments</relationshipName>
    <type>Lookup</type>
</CustomField>