metadata/force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__CCOrder__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CCOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References the order this payment was applied to (optional).</description>
    <label>CC Order</label>
    <referenceTo>ccrz__E_Order__c</referenceTo>
    <relationshipLabel>CC Transaction Payments</relationshipLabel>
    <relationshipName>TransactionPayments</relationshipName>
    <type>Lookup</type>
</CustomField>