metadata/force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__Comments__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Comments__c</fullName>
    <description>Comments associated with the transaction.  These should normally be written when the transaction is created and then never touched.</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>