metadata/force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__InvoiceAppliedTo__c.field-meta.xml
<CustomField>
    <fullName>ccrz__InvoiceAppliedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invoice this payment was applied to (optional).  This is the invoice that the payment was applied to.  In a summary invoice case this will be the child invoice the sub-payment was applied to.  For a non-summary case this will be the same as the applied for field.</description>
    <label>Invoice Applied To</label>
    <referenceTo>ccrz__E_Invoice__c</referenceTo>
    <relationshipLabel>CC Transaction Payments To</relationshipLabel>
    <relationshipName>TransactionPaymentsTo</relationshipName>
    <type>Lookup</type>
</CustomField>