metadata/force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__ParentTransactionPayment__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ParentTransactionPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If a transaction payment is made against multiple items, e.g. multiple-invoices, a parent transaction payment may be used to store the core payment data but have child payments that then are used to track individual payment amounts against each individual item.</description>
    <label>Parent Transaction Payment</label>
    <referenceTo>ccrz__E_TransactionPayment__c</referenceTo>
    <relationshipLabel>CC Transaction Payments</relationshipLabel>
    <relationshipName>ChildTransactionPayments</relationshipName>
    <type>Lookup</type>
</CustomField>