metadata/force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__SourceTransactionPayment__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SourceTransactionPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to another transaction payment that was used as the source for this transaction.  E.g. in a AUTH, later CAPTURE scenario the AUTH would be the source transaction payment for the CAPTURE.  This allows the chaining of transactional data.</description>
    <label>Source Transaction Payment</label>
    <referenceTo>ccrz__E_TransactionPayment__c</referenceTo>
    <relationshipLabel>Sourced Transaction Payments</relationshipLabel>
    <relationshipName>SourcedTransactionPayments</relationshipName>
    <type>Lookup</type>
</CustomField>