metadata/force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__StoredPayment__c.field-meta.xml
<CustomField>
    <fullName>ccrz__StoredPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References the original stored payment, if there is one</description>
    <label>Stored Payment</label>
    <referenceTo>ccrz__E_StoredPayment__c</referenceTo>
    <relationshipLabel>CC Transaction Payments</relationshipLabel>
    <relationshipName>CC_Transaction_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>