metadata/force-app/main/default/objects/ccrz__E_TransactionPayment__c/fields/ccrz__TransactionTS__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TransactionTS__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>The date/time when the transaction occurred.</description>
    <label>Transaction Timestamp</label>
    <type>DateTime</type>
</CustomField>